--- a/Jarvis/scripts/docker/02-homarr/compose.yml
+++ b/Jarvis/scripts/docker/02-homarr/compose.yml
@@ -1,21 +1,21 @@
 services:
   homarr:
-    container_name: homarr
+    container_name: ${JARVIS_CONTAINER_NAME}
     image: ghcr.io/ajnart/homarr
     restart: unless-stopped
     ports:
       - '7575:7575'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ${JARVIS_CONFIG_ROOT}/homarr/configs:/app/data/configs
-      - ${JARVIS_CONFIG_ROOT}/homarr/icons:/app/public/icons
-      - ${JARVIS_CONFIG_ROOT}/homarr/data:/data
+      - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/configs:/app/data/configs
+      - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/icons:/app/public/icons
+      - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/data:/data
     labels:
       - traefik.enable=true
-      - traefik.http.routers.pihole.rule=Host(`myjarvis.in`)
-      - traefik.http.routers.pihole.entrypoints=websecure
-      - traefik.http.routers.pihole.tls=true
-      - traefik.http.routers.pihole.tls.certresolver=letsencrypt
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`myjarvis.in`)
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
     networks:
       - proxy
 
