--- a/Jarvis/scripts/docker/99-cloudflared/compose.yml
+++ b/Jarvis/scripts/docker/99-cloudflared/compose.yml
@@ -1,13 +1,13 @@
 services:
   cloudflared:
-    container_name: cloudflared
+    container_name: ${JARVIS_CONTAINER_NAME}
     image: cloudflare/cloudflared
     restart: unless-stopped
     command: tunnel --no-autoupdate run
     environment:
       TUNNEL_TOKEN: ${JARVIS_CF_TUNNEL_TOKEN}
     volumes:
-      - ${JARVIS_CONFIG_ROOT}/cloudflared:/etc/cloudflared
+      - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}:/etc/cloudflared
     networks:
       - proxy
 
