--- a/Jarvis/scripts/docker/07-homarr/compose.yml
+++ b/Jarvis/scripts/docker/07-homarr/compose.yml
@@ -12,7 +12,7 @@ services:
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/data:/data
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`myjarvis.in`)
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_DOMAIN}`)
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
