--- a/Jarvis/scripts/docker/01-pihole/compose.yml
+++ b/Jarvis/scripts/docker/01-pihole/compose.yml
@@ -9,6 +9,7 @@ services:
       WEBPASSWORD: ${JARVIS_PASSWORD}
       PIHOLE_DNS_: ${JARVIS_GOOGLE_DNS}
       FTLCONF_LOCAL_IPV4: ${JARVIS_STATIC_IP}
+      PIHOLE_DOMAIN: pi.hole
       VIRTUAL_HOST: pi.hole
     ports:
       - 53:53/tcp
@@ -19,7 +20,7 @@ services:
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/dnsmasq.d:/etc/dnsmasq.d
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.myjarvis.in`)
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.${JARVIS_DOMAIN}`)
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
