--- a/Jarvis/scripts/docker/02-codeserver/compose.yml
+++ b/Jarvis/scripts/docker/02-codeserver/compose.yml
@@ -23,7 +23,7 @@ services:
       - ${JARVIS_CONFIG_ROOT}:/home/coder/AppConfigs
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.myjarvis.in`)
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.${JARVIS_DOMAIN}`)
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
