--- a/Jarvis/scripts/docker/06-portainer/compose.yml
+++ b/Jarvis/scripts/docker/06-portainer/compose.yml
@@ -11,7 +11,7 @@ services:
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}:/data
     labels:
       - traefik.enable=true
-      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.myjarvis.in`)
+      - traefik.http.routers.${JARVIS_CONTAINER_NAME}.rule=Host(`${JARVIS_CONTAINER_NAME}.${JARVIS_DOMAIN}`)
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
