--- a/Jarvis/scripts/docker/99-cloudflared/compose.yml
+++ b/Jarvis/scripts/docker/99-cloudflared/compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}:/etc/cloudflared
     networks:
-      - proxy
+      - ${JARVIS_PROXY_DOCKER_NETWORK}
 
 networks:
   proxy:
