--- a/Jarvis/scripts/docker/00-traefik/compose.yml
+++ b/Jarvis/scripts/docker/00-traefik/compose.yml
@@ -38,6 +38,9 @@ services:
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.service=api@internal
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
+      - traefik.http.services.${JARVIS_CONTAINER_NAME}.loadbalancer.server.port=80
+    extra_hosts: 
+      host.docker.internal: host-gateway
     networks:
       - ${JARVIS_PROXY_DOCKER_NETWORK}
 
