--- a/Jarvis/scripts/docker/03-homeassistant/compose.yml
+++ b/Jarvis/scripts/docker/03-homeassistant/compose.yml
@@ -1,7 +1,7 @@
 services:
   homeassistant:
     container_name: ${JARVIS_CONTAINER_NAME}
-    image: "ghcr.io/home-assistant/home-assistant"
+    image: ghcr.io/home-assistant/home-assistant
     restart: unless-stopped
     network_mode: host
     privileged: true
@@ -19,3 +19,4 @@ services:
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
+      - traefik.http.services.${JARVIS_CONTAINER_NAME}.loadbalancer.server.port=8123
