--- a/Jarvis/scripts/docker/04-alist/compose.yml
+++ b/Jarvis/scripts/docker/04-alist/compose.yml
@@ -4,7 +4,7 @@ services:
     image: xhofe/alist:latest-ffmpeg
     restart: unless-stopped
     ports:
-      - "5244:5244"
+      - 5244:5244
     environment:
       TZ: ${JARVIS_TZ}
       PUID: ${JARVIS_PUID}
@@ -20,6 +20,7 @@ services:
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
+      - traefik.http.services.${JARVIS_CONTAINER_NAME}.loadbalancer.server.port=5244
     networks:
       - ${JARVIS_PROXY_DOCKER_NETWORK}
 
