--- a/Jarvis/scripts/docker/05-duplicati/compose.yml
+++ b/Jarvis/scripts/docker/05-duplicati/compose.yml
@@ -19,6 +19,7 @@ services:
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
+      - traefik.http.services.${JARVIS_CONTAINER_NAME}.loadbalancer.server.port=8200
     networks:
       - ${JARVIS_PROXY_DOCKER_NETWORK}
 
