--- a/Jarvis/scripts/docker/07-homarr/compose.yml
+++ b/Jarvis/scripts/docker/07-homarr/compose.yml
@@ -4,7 +4,7 @@ services:
     image: ghcr.io/ajnart/homarr
     restart: unless-stopped
     ports:
-      - '7575:7575'
+      - 7575:7575
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/configs:/app/data/configs
@@ -16,6 +16,7 @@ services:
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.entrypoints=websecure
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls=true
       - traefik.http.routers.${JARVIS_CONTAINER_NAME}.tls.certresolver=${JARVIS_CERT_RESOLVER}
+      - traefik.http.services.${JARVIS_CONTAINER_NAME}.loadbalancer.server.port=7575
     networks:
       - ${JARVIS_PROXY_DOCKER_NETWORK}
 
