--- a/Jarvis/scripts/docker/06-portainer/compose.yml
+++ b/Jarvis/scripts/docker/06-portainer/compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 9000:9000
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}:/data
     labels:
       - traefik.enable=true
