--- a/Jarvis/scripts/docker/07-homarr/compose.yml
+++ b/Jarvis/scripts/docker/07-homarr/compose.yml
@@ -5,8 +5,12 @@ services:
     restart: unless-stopped
     ports:
       - 7575:7575
+    environment:
+      TZ: ${JARVIS_TZ}
+      DEFAULT_COLOR_SCHEME: dark
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/configs:/app/data/configs
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/icons:/app/public/icons
       - ${JARVIS_CONFIG_ROOT}/${JARVIS_CONTAINER_NAME}/data:/data
