--- a/Jarvis/scripts/docker/08-syncpihole/compose.yml
+++ b/Jarvis/scripts/docker/08-syncpihole/compose.yml
@@ -4,7 +4,7 @@ services:
     image: mattwebbio/orbital-sync
     environment:
       PRIMARY_HOST_BASE_URL: http://pihole
-      PRIMARY_HOST_PASSWORD: ${JARVIS_PASSWORD}
+      PRIMARY_HOST_PASSWORD: ${JARVIS_ADMIN_PASSWORD}
       # SECONDARY_HOSTS_1_BASE_URL: 'https://pihole2.example.com'
       # SECONDARY_HOSTS_1_PASSWORD: 'your_password2'
       INTERVAL_MINUTES: 60
