--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "files.eol": "\n",
+	"editor.tabSize": 4,
+    "editor.insertSpaces": false,
+	"editor.detectIndentation": false,
     "search.exclude": {
         "**/archive": true,
     }
