🔥 Add new attr no-new-privileges:true to all containers

--- a/Jarvis/scripts/docker/alist/compose.yml
+++ b/Jarvis/scripts/docker/alist/compose.yml
@@ -3,6 +3,8 @@ services:
     container_name: ${JARVIS_CONTAINER_NAME}
     image: xhofe/alist:latest-ffmpeg
     restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     ports:
       - 5244:5244
     environment:
