--- a/Jarvis/scripts/docker/code/compose.yml
+++ b/Jarvis/scripts/docker/code/compose.yml
@@ -5,6 +5,8 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
+    security_opt:
+      - no-new-privileges:true
     build:
       dockerfile: Dockerfile
     environment:
