--- a/Jarvis/scripts/docker/auth/compose.yml
+++ b/Jarvis/scripts/docker/auth/compose.yml
@@ -3,6 +3,8 @@ services:
     container_name: ${JARVIS_CONTAINER_NAME}
     image: authelia/authelia
     restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     ports:
       - 9091:9091
     environment:
