--- a/Jarvis/scripts/docker/portainer/compose.yml
+++ b/Jarvis/scripts/docker/portainer/compose.yml
@@ -3,6 +3,8 @@ services:
     container_name: ${JARVIS_CONTAINER_NAME}
     image: portainer/portainer-ce
     restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     ports:
       - 9000:9000
     volumes:
